# r24_anchor_gofundme

./: Anchor.toml
programs/r24_anchor_gofundme/: Cargo.toml
programs/r24_anchor_gofundme/src/: lib.rs
tests/: r24_anchor_gofundme.ts
